--- a/WeldingPassportsApp/WeldingPassportsApp/Resources/Views/PEPassports/Index.fr.resx
+++ b/WeldingPassportsApp/WeldingPassportsApp/Resources/Views/PEPassports/Index.fr.resx
@@ -144,4 +144,16 @@
   <data name="PE Passports Index" xml:space="preserve">
     <value>Index des Passeports PE</value>
   </data>
+  <data name="Valid" xml:space="preserve">
+    <value>Valable</value>
+  </data>
+  <data name="Expired" xml:space="preserve">
+    <value>Vervallen</value>
+  </data>
+  <data name="Revoked" xml:space="preserve">
+    <value>Ingetrokken</value>
+  </data>
+  <data name="Validity EOL" xml:space="preserve">
+    <value>Validité EOL</value>
+  </data>
 </root>
