--- a/WeldingPassportsApp/WeldingPassportsApp/Resources/Views/Welders/Details.fr.resx
+++ b/WeldingPassportsApp/WeldingPassportsApp/Resources/Views/Welders/Details.fr.resx
@@ -115,4 +115,16 @@
   <data name="Delete" xml:space="preserve">
     <value>Supprimer</value>
   </data>
+  <data name="Valid" xml:space="preserve">
+    <value>Valable</value>
+  </data>
+  <data name="Validity EOL" xml:space="preserve">
+    <value>Validité EOL</value>
+  </data>
+  <data name="Expired" xml:space="preserve">
+    <value>Vervallen</value>
+  </data>
+  <data name="Revoked" xml:space="preserve">
+    <value>Ingetrokken</value>
+  </data>
 </root>
