--- a/WeldingPassportsApp/WeldingPassportsApp/Resources/Views/Welders/Details.nl.resx
+++ b/WeldingPassportsApp/WeldingPassportsApp/Resources/Views/Welders/Details.nl.resx
@@ -115,4 +115,16 @@
   <data name="Welder Details" xml:space="preserve">
     <value>Lasser Details</value>
   </data>
+  <data name="Valid" xml:space="preserve">
+    <value>Geldig</value>
+  </data>
+  <data name="Expired" xml:space="preserve">
+    <value>Expiré</value>
+  </data>
+  <data name="Revoked" xml:space="preserve">
+    <value>Abrogé</value>
+  </data>
+  <data name="Validity EOL" xml:space="preserve">
+    <value>Geldigheid EOL</value>
+  </data>
 </root>
